# hello-jni

./: 1-关于C语言里的宏定义.txt  2-C语言typedef的用法详解.txt  3-C语言(#if、#ifdef、#ifndef)条件编译详解.txt  3-预处理命令的一个应用实例.txt  4-C语言结构体详解，C语言struct用法详解.txt  README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/hellojni/: HelloJni.java  JNIUtil.java  MainActivity.java
app/src/main/jni/: LogUtil.h  com_example_hellojni_JNIUtil.h  testOne.cpp  testTwo.cpp  testTwo.h  test_3.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
